# aoc-rust

./: .gitignore  Cargo.toml  README.md
aoc_2015/: Cargo.toml
input/2015/: 03.txt
input/2021/: 08.txt  14.txt  25.txt
output/2015/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt
output/2021/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  17.txt  18.txt  20.txt  25.txt
src/: aoc2015.rs  aoc2016.rs  aoc2021.rs  aoc2022.rs  main.rs  utils.rs
src/aoc2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  mod.rs
src/aoc2016/: day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  mod.rs
src/aoc2017/: day03.rs  mod.rs
src/aoc2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day17.rs  day18.rs  day20.rs  day25.rs  mod.rs
src/aoc2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day17.rs  day18.rs  mod.rs
src/aoc2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  mod.rs  template.rs
src/utils/: advent.rs  aoc.rs  coordinates.rs  coords.rs  directions.rs  grid.rs  io.rs  misc.rs
src/utils/v2/: aoc.rs  coords.rs  grid.rs  mod.rs  parser.rs  solver.rs
