[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0" # hashing used in AoC 2015
ansi_term = "0.12.1" # console font formatting
regex = "1.5.4"
indoc = "1.0.3" # multi-line indented strings
lazy_static = "1.4.0" # avoid re-compiling regex
itertools = "0.10.1" # combinatorics

[dev-dependencies]
rstest = "0.11.0"