[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0" # hashing used in AoC 2015
ansi_term = "0.12.1" # console font formatting
regex = "1.5.4"
indoc = "1.0.3" # multi-line indented strings
lazy_static = "1.4.0" # avoid re-compiling regex
itertools = "0.10.1" # combinatorics and more
json = "0.12.4"
priority-queue = "1.1.1"
ndarray = "0.15.4"
gcd = "2.0.2"
statrs = "0.16.0"
petgraph = "0.6.0" # graphs
bimap = "0.6.1" # bijective maps
serde_scan = "0.4.1" # alternative to regex for parsing of AoC input files
trees = "0.4.2"
num-integer = "0.1.44"
once-cell-regex = "0.2.1"

[dev-dependencies]
rstest = "0.15.0"
criterion = "0.4.0"